# AI-web

./: .gitignore  DELETE_MODAL_FINAL.md  PROXY.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
api/: README.md  alembic.ini  app.py  db_design.md  dependencies.py  ionq  pyproject.toml  requirements.txt  security.py  settings.py
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 0001_initial_schema.py  03382b47e85d_add_quiz_folder.py  04b67afe490d_add_quiz_attempts_table.py  0b4b60edd8f0_drop_attachment_last_transcription.py  0ef8f788d9c4_update_the_enum_type.py  1b42a0d9a294_update_the_relationship_between_.py  1c1b74155a7b_add_summary_to_the_attachment.py  2d48c8f8158e_remove_attachment_kind_column.py  3f35efbd3040_remove_description_from_the_mind_map.py  4922e15c3899_add_summary_to_the_attachment.py  7b2719730c16_fix_attachment_transcription_status_.py  8f1dd654eb5d_add_flash_card_folder_and_quiz_update_.py  ad129feab278_rename_notes_tables.py
api/db/: __init__.py  database.py  models.py
api/dependencies/: __init__.py  auth.py
api/routes/: ai_config.py  attachments.py  audio.py  auth.py  files.py  flashcard_folders.py  flashcards.py  mindmaps.py  notebook_folders.py  notebooks.py  notes.py  quizzes.py  responses.py
api/schemas/: __init__.py  note.py  user.py
api/security/: __init__.py  core.py
api/services/: ai_registry.py  openai_client.py  openai_utils.py  s3_client.py  utils.py
web/: .env.development  components.d.ts  frontend_auth_notes.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  (+4 more)
(+95 files in other folders)
