[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["miclon <jcnd@163.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.6.4"
fastapi = {extras = ["all"], version = "^0.110.0"}
httpx = "^0.23.3"
jinja2 = "^3.1.2"
sqlalchemy = "^2.0.15"
alembic = "^1.11.1"
psycopg = {extras = ["binary"], version = "^3.1.8"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
boto3 = "^1.26.150"
pydantic-settings = "^2.0.3"
bcrypt = "3.2.2"
python-multipart = "^0.0.9"
email-validator = "^2.1.0"
typing-extensions = "^4.12.2"
openai = "^1.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
